--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
         "@vue/eslint-config-prettier": "^5.0.0",
         "@vue/eslint-config-typescript": "^4.0.0",
         "babel-eslint": "^10.0.1",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-plugin-transform-decorators-legacy": "^1.3.5",
         "eslint": "^4.19.1",
         "eslint-config-prettier": "^6.3.0",
         "eslint-friendly-formatter": "^4.0.1",
         "eslint-loader": "^2.1.1",
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-vue": "^5.2.3",
+        "pug": "^2.0.4",
+        "pug-plain-loader": "^1.0.0",
         "typescript": "^3.6.3",
         "vue-class-component": "^7.1.0",
         "vue-property-decorator": "^8.2.2",
