--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
     "author": "Sergey Shapirenko <S.Shapirenko@ridetransfer.com>",
     "private": true,
     "scripts": {
-        "dev": "nuxt",
-        "build": "nuxt build",
-        "start": "nuxt start",
-        "generate": "nuxt generate",
+        "dev": "nuxt-ts",
+        "build": "nuxt-ts build",
+        "start": "nuxt-ts start",
+        "generate": "nuxt-ts generate",
         "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
         "format": "prettier --write ./**/*.{js,ts,vue}",
         "precommit": "npm run lint"
     },
     "dependencies": {
-        "nuxt": "^2.0.0"
+        "@nuxt/typescript-runtime": "^0.2.0",
+        "nuxt": "^2.0.0",
+        "nuxt-property-decorator": "^2.4.0",
+        "vuex": "^3.1.1",
+        "vuex-class": "^0.3.2"
     },
     "devDependencies": {
+        "@nuxt/typescript-build": "^0.3.0",
         "@vue/cli-plugin-eslint": "^3.11.0",
         "@vue/cli-plugin-typescript": "^3.11.0",
         "@vue/eslint-config-prettier": "^5.0.0",
@@ -32,9 +37,6 @@
         "eslint-plugin-vue": "^5.2.3",
         "pug": "^2.0.4",
         "pug-plain-loader": "^1.0.0",
-        "typescript": "^3.6.3",
-        "vue-class-component": "^7.1.0",
-        "vue-property-decorator": "^8.2.2",
-        "vuex-class": "^0.3.2"
+        "typescript": "^3.6.3"
     }
 }
