--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "devDependencies": {
         "@nuxt/typescript-build": "^0.3.0",
+        "@typescript-eslint/eslint-plugin": "^2.3.2",
         "@vue/cli-plugin-eslint": "^3.11.0",
         "@vue/cli-plugin-typescript": "^3.11.0",
         "@vue/eslint-config-prettier": "^5.0.0",
