--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "target": "esnext",
         "module": "esnext",
         "moduleResolution": "node",
+        "importHelpers": true,
         "lib": ["esnext", "esnext.asynciterable", "dom"],
         "esModuleInterop": true,
         "experimentalDecorators": true,
@@ -16,7 +17,8 @@
             "@/*": ["./*"],
             "~/*": ["./*"]
         },
-        "types": ["@types/node", "@nuxt/types"]
+        "types": ["@types/node", "@nuxt/types"],
+        "typeRoots": ["node_modules/@types"]
     },
-    "exclude": ["node_modules"],
+    "exclude": ["node_modules"]
 }
