--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "devDependencies": {
         "@nuxt/typescript-build": "^0.3.0",
         "@typescript-eslint/eslint-plugin": "^2.3.2",
-        "@vue/cli-plugin-eslint": "^3.11.0",
+        "@vue/cli-plugin-eslint": "^4.0.0-rc.3",
         "@vue/cli-plugin-typescript": "^3.11.0",
         "@vue/eslint-config-prettier": "^5.0.0",
         "@vue/eslint-config-typescript": "^4.0.0",
         "babel-eslint": "^10.0.1",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-decorators-legacy": "^1.3.5",
-        "eslint": "^4.19.1",
+        "eslint": "^6.5.1",
         "eslint-config-prettier": "^6.3.0",
         "eslint-friendly-formatter": "^4.0.1",
         "eslint-loader": "^2.1.1",
@@ -38,6 +38,6 @@
         "eslint-plugin-vue": "^5.2.3",
         "pug": "^2.0.4",
         "pug-plain-loader": "^1.0.0",
-        "typescript": "^3.6.3"
+        "typescript": "^3.2.1"
     }
 }
